[gd_scene load_steps=3 format=3 uid="uid://ijqyqql2n3w1"]

[ext_resource type="Script" uid="uid://dkht3tyypkmbt" path="res://scripts/fake_menu.gd" id="1_ftwc7"]
[ext_resource type="AudioStream" uid="uid://blb7l3rvowvtn" path="res://Assets/Sounds/enchanted tiki 86.mp3" id="2_4ibnw"]

[node name="FakeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftwc7")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 10.0
offset_right = 59.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Cap the Citadel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -15.5
offset_right = 51.0
offset_bottom = 15.5
grow_vertical = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -15.5
offset_right = 35.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -15.5
offset_right = -10.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Quit"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4ibnw")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_pressed"]
